# webgl-rs-shooter

./: Cargo.toml  README.md  gatsby-config.js  index.html  index.js  object-detection2.ipynb  package-lock.json  package.json  site.css  webpack.config.js
.github/workflows/: azure-static-web-apps-wonderful-ocean-0fd33110f.yml
src/: buffer.rs  dom.rs  game.rs  lib.rs  matrix.rs  particle_emitter.rs  particle_shader.rs  shader.rs  shader_cache.rs  shapes.rs  sprite.rs  sprite_renderer.rs  sprite_shader.rs  tank_game.rs  terrain.rs  texture.rs  ui.rs  utils.rs  vao.rs  vector.rs
src/pages/: arcade.js  index.js
tests/: web.rs
www/: LICENSE-MIT  index.js  package-lock.json  package.json
